--- a/views/anenst/history.html
+++ b/views/anenst/history.html
@@ -17,24 +17,8 @@
 <div class="header">
     <div class="contain">
         <div class="con-header">
-            <a class="logo" href="index.html"></a>
+            <a class="logo" href="../../../officialwebsite/index.html"></a>
             <div class="nav-right">
-                <!--<ul class="nav navbar-nav">-->
-                <!--<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
-                <!--<li><a href="#">Link</a></li>-->
-                <!--<li class="dropdown">-->
-                <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
-                <!--<ul class="dropdown-menu">-->
-                <!--<li><a href="#">Action</a></li>-->
-                <!--<li><a href="#">Another action</a></li>-->
-                <!--<li><a href="#">Something else here</a></li>-->
-                <!--<li role="separator" class="divider"></li>-->
-                <!--<li><a href="#">Separated link</a></li>-->
-                <!--<li role="separator" class="divider"></li>-->
-                <!--<li><a href="#">One more separated link</a></li>-->
-                <!--</ul>-->
-                <!--</li>-->
-                <!--</ul>-->
                 <form class="navbar-form navbar-left">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Search">
@@ -47,19 +31,17 @@
     <div class="nav-tag">
         <ul class="nav nav-bar">
             <li class="nav-tabs">
-                <a class="first-tab active" href="#">首页</a>
+                <a class="first-tab active" href="../../../officialwebsite/index.html">首页</a>
             </li>
             <li class="nav-tabs">
                 <a class="first-tab" href="#">关于我们</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="views/anenst/introduce.html">公司概况</a></li>
-                        <li><a href="#">总裁致辞</a></li>
-                        <li><a href="#">发展历史</a></li>
-                        <li><a href="#">集团架构</a></li>
-                        <li><a href="#">文化理念</a></li>
-                        <li><a href="#">员工风采</a></li>
-                        <li><a href="#">联系我们</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/companyinfo.html">公司概况</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/speech.html">总裁致辞</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/history.html">发展历史</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/groupStructure.html">集团架构</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/contact.html">联系我们</a></li>
                     </ul>
                 </div>
             </li>
@@ -67,9 +49,9 @@
                 <a class="first-tab" href="#">媒体中心</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="./views/news.html">新闻动态</a></li>
-                        <li><a href="./views/news.html">媒体报道</a></li>
-                        <li><a href="#">专题报道</a></li>
+                        <li><a href="../../../officialwebsite/views/media/news.html">新闻动态</a></li>
+                        <li><a href="../../../officialwebsite/views/media/media.html">媒体报道</a></li>
+                        <li><a href="../../../officialwebsite/views/media/thematicReport.html">专题报道</a></li>
                     </ul>
                 </div>
             </li>
@@ -77,18 +59,18 @@
                 <a class="first-tab" href="#">公司产品</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">业务领域</a></li>
-                        <li><a href="#">产品展示</a></li>
+                        <li><a href="../../../officialwebsite/views/product/business.html">业务领域</a></li>
+                        <li><a href="../../../officialwebsite/views/product/products.html">产品展示</a></li>
+                        <li><a href="../../../officialwebsite/views/product/cooperation.html">招商合作</a></li>
                     </ul>
                 </div>
             </li>
             <li class="nav-tabs">
-                <a class="first-tab" href="#">社会责任</a>
+                <a class="first-tab" href="#">公司文化</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">爱心助学</a></li>
-                        <li><a href="#">慈善捐助</a></li>
-                        <li><a href="#">活动支持</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/culture.html">文化理念</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/mien.html">员工风采</a></li>
                     </ul>
                 </div>
             </li>
@@ -96,16 +78,17 @@
                 <a class="first-tab" href="#">加入我们</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">人才战略</a></li>
-                        <li><a href="#">员工成长</a></li>
-                        <li><a href="#">工作机会</a></li>
-                        <li><a href="#">联系hr</a></li>
+                        <li><a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a></li>
+                        <li><a href="../../../officialwebsite/views/join/recruit.html">工作机会</a></li>
+                        <li><a href="../../../officialwebsite/views/join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
             </li>
         </ul>
     </div>
 </div>
+
+
 <div class="contain">
     <div class="main-con contain">
         <div class="container" style="padding: 0;overflow: hidden">
@@ -118,7 +101,7 @@
                             <i>&nbsp;&gt;&gt;</i>
                             <a href="">关于我们</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">公司概况</a>
+                            <a href="">发展历史</a>
                         </span>
                     </div>
                     <div class="text-introduce">
@@ -181,47 +164,47 @@
             <li><span>关于我们</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="">公司概况</a></li>
-                        <li><a href="">总裁致辞</a></li>
-                        <li><a href="">发展历史</a></li>
-                        <li><a href="">联系我们</a></li>
-                        <li><a href="">集团架构</a></li>
-                    </ul>
-                </div>
-            </li>
-            <li><span>企业文化</span>
-                <div class="list-link">
-                    <ul>
-                        <li><a href="">文化理念</a></li>
-                        <li><a href="">员工风采</a></li>
-                        <li><a href="">精神文化</a></li>
-                    </ul>
-                </div>
-            </li>
-            <li><span>上市产品</span>
-                <div class="list-link">
-                    <ul>
-                        <li><a href="">业务领域</a></li>
-                        <li><a href="">产品展示</a></li>
-                        <li><a href="">招商合作</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/companyinfo.html">公司概况</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/speech.html">总裁致辞</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/history.html">发展历史</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/groupStructure.html">集团架构</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/contact.html">联系我们</a></li>
+
                     </ul>
                 </div>
             </li>
             <li><span>媒体中心</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="">新闻动态</a></li>
-                        <li><a href="">媒体报道</a></li>
-                        <li><a href="">专题报道</a></li>
+                        <li><a href="../../../officialwebsite/views/media/news.html">新闻动态</a></li>
+                        <li><a href="../../../officialwebsite/views/media/media.html">媒体报道</a></li>
+                        <li><a href="../../../officialwebsite/views/media/thematicReport.html">专题报道</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><span>公司产品</span>
+                <div class="list-link">
+                    <ul>
+                        <li><a href="../../../officialwebsite/views/product/business.html">业务领域</a></li>
+                        <li><a href="../../../officialwebsite/views/product/products.html">产品展示</a></li>
+                        <li><a href="../../../officialwebsite/views/product/cooperation.html">招商合作</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><span>公司文化</span>
+                <div class="list-link">
+                    <ul>
+                        <li><a href="../../../officialwebsite/views/anenst/culture.html">文化理念</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/mien.html">员工风采</a></li>
                     </ul>
                 </div>
             </li>
             <li><span>加入我们</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="">人才战略</a></li>
-                        <li><a href="">员工成才</a></li>
-                        <li><a href="">工作机会</a></li>
+                        <li><a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a></li>
+                        <li><a href="../../../officialwebsite/views/join/recruit.html">工作机会</a></li>
+                        <li><a href="../../../officialwebsite/views/join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
             </li>
@@ -233,11 +216,13 @@
                 <li><img src="../../images/wechat.png" alt=""></li>
             </ul>
         </div>
+
     </div>
     <div class="foot-content">
         Copyright © 启东菲博特电子商务有限公司 沪ICP备08023599号-6
     </div>
 </div>
+
 <script src="../../js/common.js"></script>
 <script>
 
