--- a/views/join/recruitinfo.html
+++ b/views/join/recruitinfo.html
@@ -88,7 +88,6 @@
     </div>
 </div>
 
-
 <div class="contain">
     <div class="main-con contain">
         <div class="container" style="padding: 0;overflow: hidden">
@@ -101,59 +100,51 @@
                             <i>&nbsp;&gt;&gt;</i>
                             <a href="">关于我们</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">文化理念</a>
+                            <a href="">工作机会</a>
                         </span>
                     </div>
-                    <div class="text-introduce">
-                        <img src="../../images/_1441705070_lc3sqq.png" alt="" width="636">
-                        <div class="culture">
-                            <div class="row-culture">
-                                <span class="cpx">目标愿景</span>
-                                <ul>
-                                    <li><em>2020年战略目标：</em>到2020年成为全球100强的国际性专业制药公司</li>
-                                    <li><em>企业愿景：</em>成为最受尊敬的全球领先制药企业</li>
-                                </ul>
-                            </div>
+                    <div class="jobinfo">
+                        <div class="square">销售</div>
+                        <ul class="requireinfo">
+                            <li class="col-xs-4">工作地点： <span>闵行区</span> </li>
+                            <li class="col-xs-4">工作经验：<span>8年</span> </li>
+                            <li class="col-xs-4">学　　历：<span></span></li>
+                            <li class="col-xs-4">工作类型：<span>全职</span>  </li>
+                            <li class="col-xs-4">招聘人数：<span>若干</span>  </li>
+                            <li class="col-xs-4">发布时间：<span>2018-01-26</span></li>
+                        </ul>
+                        <div class="jobinfo">
+                            <div class="title">职位描述</div>
+                            <p> 1、根据公司战略，负责制定可执行的客户拓展策略；<br>
+                                2、对公司整体营销指标负责，负责制定具体销售计划并带领团队完成；<br>
+                                3、参与公司营销体系的搭建，负责营销团队的日常管理；<br>
+                                4、负责制定公司产品、方案的推广策略；<br>
+                                5、负责客户项目的策划及资源协调；<br>
+                                6、KA的日常维护；<br>
+                                7、行业及竞品分析，并对公司产品策略做输入。</p>
                         </div>
-                        <div class="culture">
-                            <div class="row-culture">
-                                <span class="cpx">企业经营理念</span>
-                                <ul>
-                                    <li><em>客户导向：</em>客户至上，创造满意，用心服务，共同发展</li>
-                                    <li><em>高效运营：</em>合理配置，简明快捷，有效执行，持续改善</li>
-                                    <li><em>合成就员工：</em>尊重平等，关爱分享，共同成长，和谐幸福</li>
-                                    <br>
-                                    <br>
-                                    <li><em>以客户为导向，</em>把握市场先机；<em>高效运营，</em>使企业在竞争中领先；<em>成就员工，</em>实现企业持久发展，基业长青。</li>
-                                </ul>
-                            </div>
+                        <div class="jobinfo">
+                            <div class="title">任职要求</div>
+                            <p>       1、本科及以上学历，医药市场或广告营销行业工作经验10年以上，其中3年以上管理经验；<br>
+                                2、性格开朗、态度积极、善于沟通；<br>
+                                3、具有广泛的良好客户关系和行业资源；<br>
+                                4、在医药E-Marketing方面具有丰富的营销策划经验；<br>
+                                5、出色的项目拓展和谈判能力；<br>
+                                6、自律并有较强的自我驱动力和优秀的团队管理能力。</p>
                         </div>
-                        <div class="culture">
-                            <div class="row-culture">
-                                <span class="cpx">核心价值观</span>
-                                <ul>
-                                    <li><em>诚信：</em>诚实正直，信守承诺，客观公正，言行一致</li>
-                                    <li><em>合作：</em>充分沟通，敏捷行动，彼此信任，合作共赢</li>
-                                    <li><em>创新：</em>开拓思路，勇于突破，联系实际，求新求变</li>
-                                    <li><em>卓越：</em>境界高尚，持续改善，自我超越，更优更强</li>
-                                    <br>
-                                    <br>
-                                    <li><em>诚信</em>是企业立命之本，<em>合作</em>是团队制胜保证，<em>创新</em>是绿叶发展动力，<em>卓越</em>是绿叶追求的境界。</li>
-                                </ul>
-                            </div>
-                        </div>
+
+
+
+
+
 
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
-                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>公司概况</a></li>
-                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>集团架构</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>文化理念</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工风采</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
+                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>工作机会</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>人才战略</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工成长</a></li>
                     </ul>
                 </div>
 
@@ -162,7 +153,6 @@
     </div>
 
 </div>
-
 <div class="footer">
     <div class="container">
 
@@ -228,7 +218,6 @@
         Copyright © 启东菲博特电子商务有限公司 沪ICP备08023599号-6
     </div>
 </div>
-
 <script src="../../js/common.js"></script>
 <script>
 
