--- a/views/join/talentStrategy.html
+++ b/views/join/talentStrategy.html
@@ -88,7 +88,6 @@
     </div>
 </div>
 
-
 <div class="contain">
     <div class="main-con contain">
         <div class="container" style="padding: 0;overflow: hidden">
@@ -97,63 +96,70 @@
                 <div class="col-sm-8">
                     <div class="bread">
                         <span>
-                            <a href="">首页</a>
+                            <a href="">加入我们</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">关于我们</a>
-                            <i>&nbsp;&gt;&gt;</i>
-                            <a href="">文化理念</a>
+                            <a href="">人才战略</a>
+
                         </span>
                     </div>
                     <div class="text-introduce">
-                        <img src="../../images/_1441705070_lc3sqq.png" alt="" width="636">
-                        <div class="culture">
-                            <div class="row-culture">
-                                <span class="cpx">目标愿景</span>
-                                <ul>
-                                    <li><em>2020年战略目标：</em>到2020年成为全球100强的国际性专业制药公司</li>
-                                    <li><em>企业愿景：</em>成为最受尊敬的全球领先制药企业</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="culture">
-                            <div class="row-culture">
-                                <span class="cpx">企业经营理念</span>
-                                <ul>
-                                    <li><em>客户导向：</em>客户至上，创造满意，用心服务，共同发展</li>
-                                    <li><em>高效运营：</em>合理配置，简明快捷，有效执行，持续改善</li>
-                                    <li><em>合成就员工：</em>尊重平等，关爱分享，共同成长，和谐幸福</li>
-                                    <br>
-                                    <br>
-                                    <li><em>以客户为导向，</em>把握市场先机；<em>高效运营，</em>使企业在竞争中领先；<em>成就员工，</em>实现企业持久发展，基业长青。</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="culture">
-                            <div class="row-culture">
-                                <span class="cpx">核心价值观</span>
-                                <ul>
-                                    <li><em>诚信：</em>诚实正直，信守承诺，客观公正，言行一致</li>
-                                    <li><em>合作：</em>充分沟通，敏捷行动，彼此信任，合作共赢</li>
-                                    <li><em>创新：</em>开拓思路，勇于突破，联系实际，求新求变</li>
-                                    <li><em>卓越：</em>境界高尚，持续改善，自我超越，更优更强</li>
-                                    <br>
-                                    <br>
-                                    <li><em>诚信</em>是企业立命之本，<em>合作</em>是团队制胜保证，<em>创新</em>是绿叶发展动力，<em>卓越</em>是绿叶追求的境界。</li>
-                                </ul>
-                            </div>
-                        </div>
+                        <div class="square">人才战略</div>
+                        <p>从绿叶制药成立开始，我们始终视员工为公司最宝贵的财富和企业可持续发展的驱动力。
+                            在践行“专业技术服务于人类健康”的使命中，我们一直将“客户导向、高效运营、成就员工”作为我们的企业的经营理念。人才战略是公司关注的重要战略之一，公司采取积极主动的人力资源政策吸引、发展和保留优秀的人才。我们关注员工的身心健康和生活保障，提倡健康生活，快乐工作，争创中国最适宜工作的公司。
+                            绿叶制药，员工拥有企业价值的认同感，事业的归属感，奋斗的成就感，生活的保障感！
+                            绿叶制药，员工释放潜能，实现梦想的舞台！</p>
+                        <p style="color: #498537">绿叶制药被《财富》杂志与全球咨询服务公司韬睿评选为2011年度“卓越雇主”（中国最适宜工作的公司）</p>
+                        <p style="color: #498537;font-weight: bold">绿叶常青学院</p>
+                        <p>为支撑集团快速发展和2020年战略目标对各级优秀管理人才的需求，公司成立了自己的企业大学——绿叶常青学院。</p>
+
+                        <p><img src="../../images/study.jpg" alt="" style="display: block"></p>
+
+                        <p><span style="color: #498537;font-weight: bold">起航人才项目：</span>从现有骨干员工中选拔高成长潜力且具有管理潜质人员，通过系统性锻炼培养，提高综合素养和基本管理技能，考核合格后进入集团一线经理储备人才库。</p>
+                        <p><span style="color: #498537;font-weight: bold"> 扬帆人才项目：</span>从现有一线经理中选拔具有高成长潜力的人员，通过系统性锻炼培养，强化提高综合管理能力，考核合格后进入集团中层经理储备人才库。</p>
+                        <p><span style="color: #498537;font-weight: bold"> 领航人才项目：</span>从现有中层经理中选拔具有高成长潜力的人员，通过系统性锻炼培养，强化提高宏观全局视野和全面管理能力，考核合格后进入集团高层经理储备人才库。</p>
+
+                        <p style="color: #498537">员工培训</p>
+
+                        <p><span style="color: #498537;font-weight: bold">新员工入职培训：</span>公司每年为大学生安排军训、拓展训练、高效能人士的7个好习惯、职业技能与素养、绿叶文化与规章制度等系列集中培训。入职培训后会安排轮岗实习，期间各部门会安排部门资深员工为导师进行指导，协助员工尽快提升岗位胜任能力。</p>
+                        <p><span style="color: #498537;font-weight: bold">岗位技能培训：</span>公司拥有大量经验丰富技能娴熟的内部业务专家，在工作中的即时培训与辅导以及经验的分享，让员工在互动中学习提高岗位技能。同时根据需要，公司提供外派参加公开课或邀请讲师内训，持续提升专业技能。</p>
+                        <p><span style="color: #498537;font-weight: bold">通用素质培训：</span>为了帮助员工深入理解并积极践行企业文化，提升职业素养，掌握工作技巧，提高个人效率，强化自我情绪管理和人际沟通水平及影响力，公司开设了企业文化、职业素养、有效沟通、情绪管理等线上（E-learning）及线下培训课程。</p>
+                        <p><span style="color: #498537;font-weight: bold">领导力培训：</span>为了提升企业管理人员的领导能力，公司设计规划了领导力提升项目，从领导自我、领导团队、领导业务三个维度帮助管理人员持续提升领导力，从而激发团队活力、创造优秀业绩。</p>
+
+                        <p style="color: #498537;font-weight: bold">职业发展</p>
+                        <p>职业发展是我们对员工的长期承诺。公司建立了研发类、专业技术类、管理类、销售类多通道职业发展路径。公司鼓励员工根据个人职业发展兴趣、职业经历、个人能力和岗位需要选择相匹配的职业发展通道，充分发挥员工潜力，实现员工与公司的可持续发展。</p>
+
+                        <p style="color: #498537;font-weight: bold">薪酬福利</p>
+
+                        <p style="color: #498537;font-weight: bold">绿叶制药集团的薪酬福利遵循这样的原则：</p>
+
+                        <p style="color: #498537;font-weight: bold">1.具有市场竞争力</p>
+                        绿叶制药提供具有竞争力的薪酬福利。公司定期参与由全球著名的薪酬调研公司组织的年度内资医药市场薪酬调研，总体了解和把握内资医药市场总体薪酬水平、现状和发展趋势，每年我们会根据公司的发展战略，制定公司的总体薪酬策略，以保证吸引、激励并留住优秀的人才。</p>
+
+                        <p style="color: #498537;font-weight: bold"> 2.基于绩效考核</p>
+                        <p>绿叶制药通过规范公平、绩效导向的考核评估体系和流程，严格按照绩效考核的结果和岗位的价值，确定员工的薪酬水平。公司的薪酬结构设计，充分考虑市场薪酬水平、岗位职责及员工绩效三方面的因素，确保内部的公平性。员工的薪酬将直接与其工作业绩挂钩，也与公司整体业绩相关。</p>
+
+                        <p style="color: #498537;font-weight: bold">除了国家规定的基本福利以外，我们还提供多项其他福利，如：</p>
+                        <p>1、节假日福利：绿叶制药在部分国家的传统节假日期间，为员工发放一定的节假日福利，包含春节福利、三八妇女节福利、六一儿童节福利、中秋节福利等。<br>
+                        2、商业保险：包含住院及门诊医疗保险、24小时人身意外险、重大疾病险，加强员工健康保障，解除员工后顾之忧。<br>
+                        3、年度体检：绿叶制药每年组织一次体检，并为员工建立健康档案。<br>
+                        4、员工互助保障计划：绿叶制药设立员工互助保障基金，员工在遭受各种意外和家庭重大困难时，除了协助员工获得法定福利和商业保险的救助外，还将从互助基金中给予一定的救助，帮助员工及家庭渡过难关。<br>
+                        5、婚礼贺金：员工初婚，公司为每对新人准备一定金额的婚礼贺金。<br>
+                        6、优秀表彰：每年举办集团及公司层面的年度表彰，奖励有突出表现的员工及团队。<br>
+                        7、金叶子勋章，员工为公司服务满10年时，公司将为其颁发黄金叶子勋章。<br>
+                        </p>
 
                     </div>
+
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
                         <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>公司概况</a></li>
                         <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
+                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>集团架构</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>文化理念</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工风采</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
+                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
                     </ul>
                 </div>
 
@@ -162,7 +168,6 @@
     </div>
 
 </div>
-
 <div class="footer">
     <div class="container">
 
@@ -228,7 +233,6 @@
         Copyright © 启东菲博特电子商务有限公司 沪ICP备08023599号-6
     </div>
 </div>
-
 <script src="../../js/common.js"></script>
 <script>
 
