--- a/views/product/business.html
+++ b/views/product/business.html
@@ -17,24 +17,8 @@
 <div class="header">
     <div class="contain">
         <div class="con-header">
-            <a class="logo" href="index.html"></a>
+            <a class="logo" href="../../../officialwebsite/index.html"></a>
             <div class="nav-right">
-                <!--<ul class="nav navbar-nav">-->
-                <!--<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
-                <!--<li><a href="#">Link</a></li>-->
-                <!--<li class="dropdown">-->
-                <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
-                <!--<ul class="dropdown-menu">-->
-                <!--<li><a href="#">Action</a></li>-->
-                <!--<li><a href="#">Another action</a></li>-->
-                <!--<li><a href="#">Something else here</a></li>-->
-                <!--<li role="separator" class="divider"></li>-->
-                <!--<li><a href="#">Separated link</a></li>-->
-                <!--<li role="separator" class="divider"></li>-->
-                <!--<li><a href="#">One more separated link</a></li>-->
-                <!--</ul>-->
-                <!--</li>-->
-                <!--</ul>-->
                 <form class="navbar-form navbar-left">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Search">
@@ -47,19 +31,17 @@
     <div class="nav-tag">
         <ul class="nav nav-bar">
             <li class="nav-tabs">
-                <a class="first-tab active" href="#">首页</a>
+                <a class="first-tab active" href="../../../officialwebsite/index.html">首页</a>
             </li>
             <li class="nav-tabs">
                 <a class="first-tab" href="#">关于我们</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="views/anenst/introduce.html">公司概况</a></li>
-                        <li><a href="#">总裁致辞</a></li>
-                        <li><a href="#">发展历史</a></li>
-                        <li><a href="#">集团架构</a></li>
-                        <li><a href="#">文化理念</a></li>
-                        <li><a href="#">员工风采</a></li>
-                        <li><a href="#">联系我们</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/companyinfo.html">公司概况</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/speech.html">总裁致辞</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/history.html">发展历史</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/groupStructure.html">集团架构</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/contact.html">联系我们</a></li>
                     </ul>
                 </div>
             </li>
@@ -67,9 +49,9 @@
                 <a class="first-tab" href="#">媒体中心</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">新闻动态</a></li>
-                        <li><a href="#">媒体报道</a></li>
-                        <li><a href="#">专题报道</a></li>
+                        <li><a href="../../../officialwebsite/views/media/news.html">新闻动态</a></li>
+                        <li><a href="../../../officialwebsite/views/media/media.html">媒体报道</a></li>
+                        <li><a href="../../../officialwebsite/views/media/thematicReport.html">专题报道</a></li>
                     </ul>
                 </div>
             </li>
@@ -77,18 +59,18 @@
                 <a class="first-tab" href="#">公司产品</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">业务领域</a></li>
-                        <li><a href="#">产品展示</a></li>
+                        <li><a href="../../../officialwebsite/views/product/business.html">业务领域</a></li>
+                        <li><a href="../../../officialwebsite/views/product/products.html">产品展示</a></li>
+                        <li><a href="../../../officialwebsite/views/product/cooperation.html">招商合作</a></li>
                     </ul>
                 </div>
             </li>
             <li class="nav-tabs">
-                <a class="first-tab" href="#">社会责任</a>
+                <a class="first-tab" href="#">公司文化</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">爱心助学</a></li>
-                        <li><a href="#">慈善捐助</a></li>
-                        <li><a href="#">活动支持</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/culture.html">文化理念</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/mien.html">员工风采</a></li>
                     </ul>
                 </div>
             </li>
@@ -96,16 +78,16 @@
                 <a class="first-tab" href="#">加入我们</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">人才战略</a></li>
-                        <li><a href="#">员工成长</a></li>
-                        <li><a href="#">工作机会</a></li>
-                        <li><a href="#">联系hr</a></li>
+                        <li><a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a></li>
+                        <li><a href="../../../officialwebsite/views/join/recruit.html">工作机会</a></li>
+                        <li><a href="../../../officialwebsite/views/join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
             </li>
         </ul>
     </div>
 </div>
+
 <div class="contain">
     <div class="main-con contain">
         <div class="container" style="padding: 0;overflow: hidden">
@@ -116,41 +98,90 @@
                         <span>
                             <a href="">首页</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">关于我们</a>
+                            <a href="">公司产品</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">联系我们</a>
+                            <a href="">业务领域</a>
                         </span>
                     </div>
                     <div class="text-introduce">
-                        <ul class="contact">
+                        <div class="culture">
+                            <div class="row-culture">
+                                <span class="cpx">丰富的产品线</span>
+                                <ul>
+                                    <li>绿叶制药的产品组合包括30多个产品，涵盖规模最大及增长速度最快的治疗领域：肿瘤、心血管系统、糖尿病、中枢神经系统，覆盖全球主要医药市场及新兴市场，包括中国、美国、欧盟、澳洲、日本、东南亚等。
+
+                                        绿叶制药的六种主要产品中，其中四种享有专利保护并用于治疗或预防高发疾病。“希美纳”是目前唯一的肿瘤放疗增敏化学制剂；“力扑素”是全球唯一的紫杉醇脂质体剂型；“血脂康”是首个拥有大型循证证据，已完成美国FDA二期临床研究的国际公认的国产调脂药品牌;
+                                        七叶皂苷钠系列产品的研究成果曾获得“国家科技进步二等奖”和其他多项荣誉；“阿卡波糖”是国内独家首仿，独家胶囊剂型；卡巴拉汀透皮贴剂是目前美国FDA唯一批准的仿制药产品。</li>
+
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="culture">
+                            <div class="row-culture">
+                                <span class="cpx">与国际接轨的质量管理体系</span>
+                                <ul>
+                                    <li>“质量源于设计”，绿叶制药从产品设计到厂房建设，均按国际标准执行，产品质量可控性高，不但能满足现阶段的需求，还为未来的发展做好了铺垫。公司建立了与国际接轨的GMP质量管理和控制体系，不断挑战质量管理的高标准，达到国际市场通行的规范。
+
+                                        绿叶制药现有6个生产基地，其中5个中国生产基地位于烟台、北京、南京和泸州；1个德国生产基地位于米斯巴赫，是欧洲当今最大的独立透皮系统制造商之一。</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="culture">
+                            <div class="row-culture">
+                                <span class="cpx">中国生产基地：</span>
+                                <ul>
+                                    <li>● 所有生产线通过2010版GMP检查</li>
+                                    <li>● 口服固体制剂生产线通过欧盟GMP检查</li>
+                                    <li>● 两次通过澳大利亚TGA GMP检查</li>
+                                    <li>● 通过ISO9001:2008质量管理体系认证</li>
+                                    <li>● 通过ISO14001:2004环境管理体系认证</li>
+                                    <li>●通过 OHSAS18001:2007职业健康安全管理体系认证</li>
+                                    <li>● 质量控制实验室获得CNAS认可</li>
+                                    <li>● 荣获全国“药品质量诚信建设示范企业”荣誉称号</li>
+                                    <li>● 微球制剂车间通过欧盟认证现场核查</li>
+
+                                </ul>
+                            </div>
+                            <div class="row-culture">
+                                <span class="cpx">德国生产基地：</span>
+                                <ul>
+                                    <li>● 通过美国FDA检查</li>
+                                    <li>● 通过欧盟GMP检查</li>
+                                    <li>● 欧洲当今最大的独立透皮系统制造商之一</li>
+                                    <li>● 工艺高度复杂、技术壁垒高的透皮制剂制造车间</li>
+                                </ul>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="area">
+                        <ul>
                             <li>
-                                <div class="col-xs-6 row-contact">
-                                    <div class="col-xs-2">
-                                        <img src="../../images/a61.png" alt="">
-                                    </div>
-                                    <div class="col-xs-10">
-                                        <span>上海</span>
-                                        <span>地址：上海市闵行区田林路1036号科技绿洲三期12号楼</span>
-                                        <span>邮编：200233</span>
-                                        <span>电话：(86)21-62376350</span>
-                                        <span>传真：(86)21-62376269</span>
-                                    </div>
-                                </div>
-                                <div class="col-xs-6 row-contact">
-                                    <div class="col-xs-2">
-                                        <img src="../../images/a61.png" alt="">
-                                    </div>
-                                    <div class="col-xs-10">
-                                        <span>上海</span>
-                                        <span>地址：上海市闵行区田林路1036号科技绿洲三期12号楼</span>
-                                        <span>邮编：200233</span>
-                                        <span>电话：(86)21-62376350</span>
-                                        <span>传真：(86)21-62376269</span>
-                                    </div>
-                                </div>
+                                <a href="">
+                                    <img src="../../images/area.png" alt="">
+                                    <p>领域1</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="../../images/area.png" alt="">
+                                    <p>领域1</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="../../images/area.png" alt="">
+                                    <p>领域1</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="../../images/area.png" alt="">
+                                    <p>领域1</p>
+                                </a>
                             </li>
                         </ul>
-
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -177,47 +208,47 @@
             <li><span>关于我们</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="">公司概况</a></li>
-                        <li><a href="">总裁致辞</a></li>
-                        <li><a href="">发展历史</a></li>
-                        <li><a href="">联系我们</a></li>
-                        <li><a href="">集团架构</a></li>
-                    </ul>
-                </div>
-            </li>
-            <li><span>企业文化</span>
-                <div class="list-link">
-                    <ul>
-                        <li><a href="">文化理念</a></li>
-                        <li><a href="">员工风采</a></li>
-                        <li><a href="">精神文化</a></li>
-                    </ul>
-                </div>
-            </li>
-            <li><span>上市产品</span>
-                <div class="list-link">
-                    <ul>
-                        <li><a href="">业务领域</a></li>
-                        <li><a href="">产品展示</a></li>
-                        <li><a href="">招商合作</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/companyinfo.html">公司概况</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/speech.html">总裁致辞</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/history.html">发展历史</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/groupStructure.html">集团架构</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/contact.html">联系我们</a></li>
+
                     </ul>
                 </div>
             </li>
             <li><span>媒体中心</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="">新闻动态</a></li>
-                        <li><a href="">媒体报道</a></li>
-                        <li><a href="">专题报道</a></li>
+                        <li><a href="../../../officialwebsite/views/media/news.html">新闻动态</a></li>
+                        <li><a href="../../../officialwebsite/views/media/media.html">媒体报道</a></li>
+                        <li><a href="../../../officialwebsite/views/media/thematicReport.html">专题报道</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><span>公司产品</span>
+                <div class="list-link">
+                    <ul>
+                        <li><a href="../../../officialwebsite/views/product/business.html">业务领域</a></li>
+                        <li><a href="../../../officialwebsite/views/product/products.html">产品展示</a></li>
+                        <li><a href="../../../officialwebsite/views/product/cooperation.html">招商合作</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><span>公司文化</span>
+                <div class="list-link">
+                    <ul>
+                        <li><a href="../../../officialwebsite/views/anenst/culture.html">文化理念</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/mien.html">员工风采</a></li>
                     </ul>
                 </div>
             </li>
             <li><span>加入我们</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="">人才战略</a></li>
-                        <li><a href="">员工成才</a></li>
-                        <li><a href="">工作机会</a></li>
+                        <li><a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a></li>
+                        <li><a href="../../../officialwebsite/views/join/recruit.html">工作机会</a></li>
+                        <li><a href="../../../officialwebsite/views/join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
             </li>
@@ -229,6 +260,7 @@
                 <li><img src="../../images/wechat.png" alt=""></li>
             </ul>
         </div>
+
     </div>
     <div class="foot-content">
         Copyright © 启东菲博特电子商务有限公司 沪ICP备08023599号-6
