--- a/views/product/cooperation.html
+++ b/views/product/cooperation.html
@@ -88,7 +88,6 @@
     </div>
 </div>
 
-
 <div class="contain">
     <div class="main-con contain">
         <div class="container" style="padding: 0;overflow: hidden">
@@ -99,61 +98,30 @@
                         <span>
                             <a href="">首页</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">关于我们</a>
+                            <a href="">公司产品</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">文化理念</a>
+                            <a href="">招商合作</a>
                         </span>
                     </div>
                     <div class="text-introduce">
-                        <img src="../../images/_1441705070_lc3sqq.png" alt="" width="636">
-                        <div class="culture">
-                            <div class="row-culture">
-                                <span class="cpx">目标愿景</span>
-                                <ul>
-                                    <li><em>2020年战略目标：</em>到2020年成为全球100强的国际性专业制药公司</li>
-                                    <li><em>企业愿景：</em>成为最受尊敬的全球领先制药企业</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="culture">
-                            <div class="row-culture">
-                                <span class="cpx">企业经营理念</span>
-                                <ul>
-                                    <li><em>客户导向：</em>客户至上，创造满意，用心服务，共同发展</li>
-                                    <li><em>高效运营：</em>合理配置，简明快捷，有效执行，持续改善</li>
-                                    <li><em>合成就员工：</em>尊重平等，关爱分享，共同成长，和谐幸福</li>
-                                    <br>
-                                    <br>
-                                    <li><em>以客户为导向，</em>把握市场先机；<em>高效运营，</em>使企业在竞争中领先；<em>成就员工，</em>实现企业持久发展，基业长青。</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="culture">
-                            <div class="row-culture">
-                                <span class="cpx">核心价值观</span>
-                                <ul>
-                                    <li><em>诚信：</em>诚实正直，信守承诺，客观公正，言行一致</li>
-                                    <li><em>合作：</em>充分沟通，敏捷行动，彼此信任，合作共赢</li>
-                                    <li><em>创新：</em>开拓思路，勇于突破，联系实际，求新求变</li>
-                                    <li><em>卓越：</em>境界高尚，持续改善，自我超越，更优更强</li>
-                                    <br>
-                                    <br>
-                                    <li><em>诚信</em>是企业立命之本，<em>合作</em>是团队制胜保证，<em>创新</em>是绿叶发展动力，<em>卓越</em>是绿叶追求的境界。</li>
-                                </ul>
-                            </div>
+                        <div class="square">招商合作</div>
+                        <div style="font-weight: bold; ">
+                            联系电话：0513-88888888
                         </div>
 
+
                     </div>
+
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
                         <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>公司概况</a></li>
                         <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
+                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>集团架构</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>文化理念</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工风采</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
+                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
                     </ul>
                 </div>
 
@@ -162,7 +130,6 @@
     </div>
 
 </div>
-
 <div class="footer">
     <div class="container">
 
@@ -228,7 +195,6 @@
         Copyright © 启东菲博特电子商务有限公司 沪ICP备08023599号-6
     </div>
 </div>
-
 <script src="../../js/common.js"></script>
 <script>
 
