--- a/views/product/productInfo.html
+++ b/views/product/productInfo.html
@@ -88,7 +88,6 @@
     </div>
 </div>
 
-
 <div class="contain">
     <div class="main-con contain">
         <div class="container" style="padding: 0;overflow: hidden">
@@ -99,61 +98,122 @@
                         <span>
                             <a href="">首页</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">关于我们</a>
+                            <a href="">公司产品</a>
                             <i>&nbsp;&gt;&gt;</i>
-                            <a href="">文化理念</a>
+                            <a href="">业务领域</a>
                         </span>
                     </div>
                     <div class="text-introduce">
-                        <img src="../../images/_1441705070_lc3sqq.png" alt="" width="636">
-                        <div class="culture">
-                            <div class="row-culture">
-                                <span class="cpx">目标愿景</span>
-                                <ul>
-                                    <li><em>2020年战略目标：</em>到2020年成为全球100强的国际性专业制药公司</li>
-                                    <li><em>企业愿景：</em>成为最受尊敬的全球领先制药企业</li>
-                                </ul>
+                        <ul id="myTab" class="nav nav-tabs">
+                            <li class="active">
+                                <a href="#wash" data-toggle="tab">
+                                    洗护
+                                </a>
+                            </li>
+                            <li><a href="#food" data-toggle="tab">食品</a></li>
+
+                        </ul>
+                        <div id="myTabContent" class="tab-content">
+                            <div class="tab-pane fade in active" id="wash">
+                                <div class="row" style="margin-top: 15px">
+                                    <div class="col-xs-6">
+                                        <div style="border: 1px solid #cccccc;clear: both;overflow: hidden">
+                                            <img src="../../images/product.jpg" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <table class="simpleinfo">
+                                            <tr><td>药品名称：</td><td>麦通纳</td></tr>
+                                            <tr><td>规格：</td><td>5mg、10mg、15mg</td></tr>
+                                            <tr><td>功能主治：</td><td>	麦通纳（注射用七叶皂苷钠），适应症为用于脑水肿、创伤或手术所致肿胀，也用于静脉回流障碍的治疗。</td></tr>
+                                        </table>
+                                    </div>
+                                </div>
+
+
+                                <div class="square">产品详情</div>
+                                <div class="allinfo">
+                                    <table class="table table-bordered" width="100%" border="0" cellspacing="0" cellpadding="0">
+                                        <tbody><tr>
+                                            <td class="zs1" width="15%" align="left" valign="middle">成份：</td>
+                                            <td class="zs2" width="85%" align="left" valign="middle">本品的主要成分为七叶皂苷钠A和七叶皂苷钠B，是从七叶树科植物天师粟的干燥成熟种子中提取的一种含酯键的三萜皂苷。
+                                                主要成份结构式：
+                                                　　
+                                                分子式：C55H85NaO24
+                                                分子量：1153.24</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="zs1" align="left" valign="middle" bgcolor="#f4fcfa">性状：</td>
+                                            <td class="zs2" align="left" valign="middle" bgcolor="#f4fcfa">本品为白色冻干疏松块状物。</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="zs1" align="left" valign="middle">用法用量：</td>
+                                            <td class="zs2" align="left" valign="middle">静脉注射或静脉滴注。
+                                                　　成人按体重一日0.1～0.4mg/kg或取本品5～10mg溶于10%葡萄糖注射液或0.9%氯化钠注射液250ml中供静脉滴注；也可取本品5～10mg溶于10%葡萄糖注射液或0.9%氯化钠注射液10～20ml中供静脉推注。重症病人可多次给药，但一日总量不得超过20mg。疗程7～10天。</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="zs1" align="left" valign="middle" bgcolor="#f4fcfa">不良反应：</td>
+                                            <td class="zs2" align="left" valign="middle" bgcolor="#f4fcfa">1. 可见注射部位局部疼痛、肿胀，经热敷可使症状迅速消失。
+                                                2. 偶有过敏反应，可按药物过敏处理原则治疗。</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="zs1" align="left" valign="middle">禁忌：</td>
+                                            <td class="zs2" align="left" valign="middle">1、肾损伤、肾衰竭、肾功能不全患者禁用。
+                                                2、孕妇禁用。
+                                                3、对本品成分过敏者禁用。</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="zs1" align="left" valign="middle" bgcolor="#f4fcfa">注意事项：</td>
+                                            <td class="zs2" align="left" valign="middle" bgcolor="#f4fcfa">1、马丁代尓大药典推荐成人静脉使用七叶皂苷钠最大日剂量应为20mg；如使用更大剂量则可能出现急性肾功能衰竭，如联合应用其他具有肾脏毒性的药物也可导致急性肾功能衰竭。有文献记载在接受心脏外科手术治疗的患者中如静脉注射大剂量七叶皂苷钠可能导致急性肾功能衰竭：其中70位患者静脉注射七叶皂苷钠日平均最大剂量为340μg/Kg时未观察到肾功能损坏；16位患者静脉注射七叶皂苷钠日平均最大剂量为360μg/Kg时可观察到轻度肾功能损坏；40位患者静脉注射七叶皂苷钠日平均最大剂量为510μg/Kg可发生急性肾功能衰竭。因此本品应严格限制日用量。若一旦出现肾功能受损，应立即停止用药，并作全面的肾功能检查，根据检查结果，按受损伤程度进行治疗。
+                                                2、本品只能用于静脉注射和滴注，禁用于动脉、肌肉或皮下注射。
+                                                3、注射时宜选用较粗静脉，切勿漏出血管外，如出现红、肿，用0.25%普鲁卡因封闭或热敷。
+                                                4、用药前后须检查肾功能。</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="zs1" align="left" valign="middle">孕妇及哺乳期妇女用药：</td>
+                                            <td class="zs2" align="left" valign="middle">孕妇禁用，哺乳期妇女慎用。</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="zs1" align="left" valign="middle" bgcolor="#f4fcfa">儿童用药：</td>
+                                            <td class="zs2" align="left" valign="middle" bgcolor="#f4fcfa">不宜用本品治疗儿童心脏手术后肿胀。</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="zs1" align="left" valign="middle">老年用药：</td>
+                                            <td class="zs2" align="left" valign="middle">尚不明确。</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="zs1" align="left" valign="middle" bgcolor="#f4fcfa">药物相互作用：</td>
+                                            <td class="zs2" align="left" valign="middle" bgcolor="#f4fcfa">与下列各类药物联合使用时要谨慎：
+                                                1、与血清蛋白结合率高的药物。
+                                                2、能严重损害肾功能的药物。
+                                                3、皮质激素类药物。
+                                                4、含碱性基团的药物（配伍时可能发生沉淀）。</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="zs1" align="left" valign="middle">药物过量：</td>
+                                            <td class="zs2" align="left" valign="middle">尚不明确。</td>
+                                        </tr>
+                                        </tbody></table>
+                                </div>
                             </div>
-                        </div>
-                        <div class="culture">
-                            <div class="row-culture">
-                                <span class="cpx">企业经营理念</span>
-                                <ul>
-                                    <li><em>客户导向：</em>客户至上，创造满意，用心服务，共同发展</li>
-                                    <li><em>高效运营：</em>合理配置，简明快捷，有效执行，持续改善</li>
-                                    <li><em>合成就员工：</em>尊重平等，关爱分享，共同成长，和谐幸福</li>
-                                    <br>
-                                    <br>
-                                    <li><em>以客户为导向，</em>把握市场先机；<em>高效运营，</em>使企业在竞争中领先；<em>成就员工，</em>实现企业持久发展，基业长青。</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="culture">
-                            <div class="row-culture">
-                                <span class="cpx">核心价值观</span>
-                                <ul>
-                                    <li><em>诚信：</em>诚实正直，信守承诺，客观公正，言行一致</li>
-                                    <li><em>合作：</em>充分沟通，敏捷行动，彼此信任，合作共赢</li>
-                                    <li><em>创新：</em>开拓思路，勇于突破，联系实际，求新求变</li>
-                                    <li><em>卓越：</em>境界高尚，持续改善，自我超越，更优更强</li>
-                                    <br>
-                                    <br>
-                                    <li><em>诚信</em>是企业立命之本，<em>合作</em>是团队制胜保证，<em>创新</em>是绿叶发展动力，<em>卓越</em>是绿叶追求的境界。</li>
-                                </ul>
+                            <div class="tab-pane fade" id="food">
+                                <div class="square">产品</div>
                             </div>
                         </div>
 
+
                     </div>
+
                 </div>
                 <div class="col-sm-4">
                     <ul class="nav-list">
                         <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>公司概况</a></li>
                         <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>总裁致辞</a></li>
-                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
+                        <li ><a href="#"><i class="glyphicon glyphicon-menu-right"></i>发展历史</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>集团架构</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>文化理念</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>员工风采</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
+                        <li class="active"><a href="#"><i class="glyphicon glyphicon-menu-right"></i>联系我们</a></li>
                     </ul>
                 </div>
 
@@ -162,7 +222,6 @@
     </div>
 
 </div>
-
 <div class="footer">
     <div class="container">
 
@@ -228,7 +287,6 @@
         Copyright © 启东菲博特电子商务有限公司 沪ICP备08023599号-6
     </div>
 </div>
-
 <script src="../../js/common.js"></script>
 <script>
 
