--- a/css/common.scss
+++ b/css/common.scss
@@ -328,7 +328,7 @@ ul,li{
       .tab-con{
         background: #dddddd;
         margin-left: 15px;
-        margin-right: 15px;
+        margin-right: 24px;
         margin-top: 10px;
         padding-left: 0;
         .item-box{
@@ -365,6 +365,7 @@ ul,li{
       }
 
     }
+    p{clear: both}
   }
   .nav-list{
     padding-top: 30px;
@@ -399,7 +400,8 @@ ul,li{
       display: flex;
       padding: 20px 0;
       a{
-        display: inline-block;
+        display: block;
+        width: 400px;
       }
       div.news-digest{
         padding: 5px 0 5px 20px;
@@ -434,6 +436,39 @@ ul,li{
     display: inline-block;
     clear: both;
     overflow: hidden;
+  }
+}
+.area{
+  ul{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    li{
+      border: 1px solid #ffffff;
+      background: #f2f2f2;
+      padding: 10px;
+      margin: 10px 10px 0 0;
+      width: 200px;
+      height: 160px;
+      position: relative;
+      a{
+        display: block;
+        position: absolute;
+        left:0 ;
+        right: 0;
+        top:0;
+        bottom: 0;
+        text-align: center;
+        padding: 20px;
+        img{
+          width: 100px;
+          height: 100px;
+        }
+      }
+    };
+    li:hover{
+      border: 1px solid #3c763d;
+    }
   }
 }
 
@@ -510,4 +545,84 @@ ul,li{
     }
   }
 
+}
+
+/***************/
+.square{
+  margin: 0px 0 10px 0;
+  background: url(../images/a31.png) no-repeat left;
+  color: #498537;
+  display: inline-block;
+  text-indent: 20px;
+  font-size: 22px;
+}
+.product-list{
+
+  li{
+    .product-name{
+      font-weight: bold;
+      font-size: 16px;
+
+    }
+    .product-intro{
+      margin-top: 8px;
+    }
+    border-bottom: 1px solid #cccccc;
+    clear: both;
+    overflow: hidden;
+    margin-top: 30px;
+    padding-bottom: 10px;
+    .img-link{
+      border: 1px solid #cccccc;
+      display: block;
+      clear: both;
+      overflow: hidden;
+    }
+  };
+}
+.allinfo{
+  border-top: 1px solid #cccccc;
+ padding-top: 10px ;
+}
+.simpleinfo{
+  margin-top: 15px;
+  tr{
+    td:first-child{
+      font-weight: bold;
+      width: 75px;
+    }
+  }
+}
+
+.hr{
+  table{
+    td{
+      padding: 5px;
+    }
+  }
+}
+
+.requireinfo{
+  display: flex;
+  flex-wrap: wrap;
+  background: #cccccc;
+  li{
+    padding: 10px;
+    font-weight: bold;
+    font-size: 16px;
+    span{
+      font-weight: normal;
+    }
+  };
+}
+.jobinfo{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  .title{
+    font-size: 24px;
+    padding: 20px 0;
+  }
+  p{
+    font-size: 14px;
+  };
 }
